more work on website

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -41,7 +41,7 @@
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text" href="index.html">Daniel Krasovski</a>
+            <a class="navbar-brand logo-text" href="index.html">Home</a>
 
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -73,9 +73,9 @@
                         </a>
                     </span>
                     <span class="fa-stack">
-                        <a href="#your-link">
+                        <a href="https://www.linkedin.com/in/daniel-krasovski-1a665416b/" target="_blank">
                             <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-twitter fa-stack-1x"></i>
+                            <i class="fab fa-linkedin fa-stack-1x"></i>
                         </a>
                     </span>
                 </span>
@@ -88,8 +88,9 @@
     <!-- Home -->
     <section class="home py-5 d-flex align-items-center" id="header">
         <div class="container text-light py-5"  data-aos="fade-right"> 
-            <h1 class="headline">Best <span class="home_text">Broadband</span><br>Internet Plans For You</h1>
-            <p class="para para-light py-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus tempore accusamus quis magnam doloremque itaque ad modi, pariatur iste labore similique officiis impedit aspernatur aperiam facere architecto. Eligendi, repellendus inventore!</p>
+            <h1 class="headline">Daniel Krasovski <br><span class="home_text">Projects</span></h1>
+            <p class="para para-light py-3">Computer Science International at Technological University Dublin
+                 2018 - 2022 <br> Computer Science at Darmstadt University of Applied Sciences 2020 - 2021</p>
             <div class="d-flex align-items-center">
                 <p class="p-2"><i class="fas fa-laptop-house fa-lg"></i></p>
                 <p>Lorem ipsum dolor sit amet.</p>  
@@ -111,18 +112,18 @@
             <div class="row text-light">
                 <div class="col-lg-4 text-center p-5" data-aos="zoom-in">
                     <i class="fas fa-tachometer-alt fa-3x p-2"></i>
-                    <h4 class="py-3">Download 1 GBPS</h4>
-                    <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                    <h4 class="py-3">Python</h4>
+                    <p class="para-light">Extensive experience with Python from Machine learning and data analysis to compiler construction</p>
                 </div>
                 <div class="col-lg-4 text-center p-5"  data-aos="zoom-in">
                     <i class="fas fa-clock fa-3x p-2"></i>
-                    <h4 class="py-3">99% Internet Uptime</h4>
-                    <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                    <h4 class="py-3">C#</h4>
+                    <p class="para-light">Unity Game development using C#</p>
                 </div>
                 <div class="col-lg-4 text-center p-5 text-dark"  data-aos="zoom-in"> 
                     <i class="fas fa-headset fa-3x p-2"></i>
-                    <h4 class="py-3">24/7 Support </h4>
-                    <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                    <h4 class="py-3"> Databases</h4>
+                    <p class="para-light">Extensive experience with SQL and minor experience using Graph databases and NoSQL databases</p>
                 </div>
             </div>
         </div> <!-- end of container -->
@@ -134,13 +135,12 @@
         <div class="container" >
             <div class="row d-flex align-items-center">
                 <div class="col-lg-7" data-aos="fade-right">
-                    <p>ABOUT US</p>
-                    <h1>We are top internet <br> service company</h1>
+                    <p>ABOUT ME</p>
+                    <h1>I am a Software Engineer</h1>
                     <p class="py-2 para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sed accusantium aut dolores inventore architecto modi cupiditate eligendi corporis, illum illo culpa. Reiciendis, molestias. Illum voluptatum quisquam ad veritatis dolorem.</p>
                     <p class="py-2 para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sed accusantium aut dolores inventore architecto modi cupiditate eligendi corporis, illum illo culpa. Reiciendis, molestias. Illum voluptatum quisquam ad veritatis dolorem.</p>
-
                     <div class="my-3">
-                        <a class="btn" href="#your-link">Learn More</a>
+                        <a class="btn" href="https://github.com/Meapy" target="_blank">Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-5 text-center py-4 py-sm-0" data-aos="fade-down"> 
