--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -100,7 +100,7 @@
                 <p>Lorem ipsum dolor sit amet.</p>  
             </div>
             <div class="my-3">
-                <a class="btn" href="#plans">View Plans</a>
+                <a class="btn" href="#plans">View Projects</a>
             </div>
         </div> <!-- end of container -->
     </section> <!-- end of home -->
@@ -136,8 +136,8 @@
             <div class="row d-flex align-items-center">
                 <div class="col-lg-7" data-aos="fade-right">
                     <p>ABOUT ME</p>
-                    <h1>I am a Software Engineer</h1>
-                    <p class="py-2 para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sed accusantium aut dolores inventore architecto modi cupiditate eligendi corporis, illum illo culpa. Reiciendis, molestias. Illum voluptatum quisquam ad veritatis dolorem.</p>
+                    <h1>I am a Backend Developer</h1>
+                    <p class="py-2 para-light">I am currently in my final year of my Computer Science International Degree. I am specializing in Applied Intelligence for my stream. For my final year project i am creating a real-time hate speech detection model using python and tensorflow and connecting it to Discord using the Discord.py API Wrapper</p>
                     <p class="py-2 para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sed accusantium aut dolores inventore architecto modi cupiditate eligendi corporis, illum illo culpa. Reiciendis, molestias. Illum voluptatum quisquam ad veritatis dolorem.</p>
                     <div class="my-3">
                         <a class="btn" href="https://github.com/Meapy" target="_blank">Learn More</a>
@@ -155,8 +155,8 @@
     <section class="services d-flex align-items-center py-5" id="services">
         <div class="container text-light">
             <div class="text-center pb-4" >
-                <p>OUR SERVICES</p> 
-                <h2 class="py-2">Explore unlimited possibilities</h2>
+                <p>MY PROJECTS</p> 
+                <h2 class="py-2">Exploring unlimited possibilities</h2>
                 <p class="para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae asperiores, quia accusantium sunt corporis optio recusandae? Nostrum libero pariatur cumque, ipsa dolores voluptatibus voluptate alias sit fuga. Itaque, ea quo.</p>
             </div>
             <div class="row gy-4 py-2" data-aos="zoom-in">
@@ -211,88 +211,88 @@
     <section class="plans d-flex align-items-center py-5" id="plans">
         <div class="container text-light" >
             <div class="text-center pb-4">
-                <p>OUR PLANS</p>
-                <h2 class="py-2">Explore unlimited possibilities</h2>
-                <p class="para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae asperiores, quia accusantium sunt corporis optio recusandae? Nostrum libero pariatur cumque, ipsa dolores voluptatibus voluptate alias sit fuga. Itaque, ea quo.</p>
+                <p>TOP PROJECTS</p>
+                <h2 class="py-2">Exploring unlimited possibilities</h2>
+                <p class="para-light">The 3 projects that i am currently working or worked on that i am the most proud of </p>
             </div>
             <div class="row gy-4" data-aos="zoom-in">
                 <div class="col-lg-4">
                     <div class="card bg-transparent px-4">
-                        <h4 class="py-2">BASIC BUNDLE</h4>
-                        <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h4 class="py-2">Final Year Project</h4>
+                        <p class="py-3">Real-Time Hate speech Detection for Discord</p>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Python</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Tensorflow</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Discord</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Juypter Notebook</p>
                         </div>
-                        <h4 class="py-3">$24/Month</h4>
+                        <h4 class="py-3">Work in Progress</h4>
                         <div class="my-3">
-                            <a class="btn" href="#your-link" >View Plans</a>
+                            <a class="btn" href="https://github.com/Meapy/FYP---Realtime-hatespeech-detection-on-discord-messages" target="_blank" >View Project</a>
                         </div>
                     </div>  
                 </div>
 
                 <div class="col-lg-4">
                     <div class="card bg-transparent px-4">
-                        <h4 class="py-2">BUSINESS BUNDLE</h4>
-                        <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h4 class="py-2">Project - 22</h4>
+                        <p class="py-3">Solar System with procedurally generated planets </p>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Unity 3D</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>C#</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Dynamic Lighting </p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Spaceship</p>
                         </div>
-                        <h4 class="py-3">$99/Month</h4>
+                        <h4 class="py-3">Finished</h4>
                         <div class="my-3">
-                            <a class="btn" href="#your-link" >View Plans</a>
+                            <a class="btn" href="https://github.com/Meapy/Project-22" target="_blank" >View Plans</a>
                         </div>
                     </div>  
                 </div>
 
                 <div class="col-lg-4">
                     <div class="card bg-transparent px-4" >
-                        <h4 class="py-2">PREMIUM BUNDLE</h4>
-                        <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h4 class="py-2">Project Oreo</h4>
+                        <p class="py-3">NLP chat bot to query information about Movies</p>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Python</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>TensorFlow</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Tkinter</p>
                         </div>
                         <div class="block d-flex align-items-center">
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>SparQL</p>
                         </div>
-                        <h4 class="py-3">$199/Month</h4>
+                        <h4 class="py-3">Finished</h4>
                         <div class="my-3">
-                            <a class="btn" href="#your-link" >View Plans</a>                    
+                            <a class="btn" href="https://github.com/Meapy/Project_Oreo" target="_blank" >View Project</a>                    
                         </div>
                     </div>  
                 </div>
