--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -56,10 +56,10 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Projects</a>
+                        <a class="nav-link" href="#services">Recent</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#plans">Plans</a>
+                        <a class="nav-link" href="#plans">Top</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -155,51 +155,56 @@
     <section class="services d-flex align-items-center py-5" id="services">
         <div class="container text-light">
             <div class="text-center pb-4" >
-                <p>MY PROJECTS</p> 
+                <p>RECENT PROJECTS</p> 
                 <h2 class="py-2">Exploring unlimited possibilities</h2>
-                <p class="para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae asperiores, quia accusantium sunt corporis optio recusandae? Nostrum libero pariatur cumque, ipsa dolores voluptatibus voluptate alias sit fuga. Itaque, ea quo.</p>
+                <p class="para-light">8 most recent projects that i've worked on</p>
             </div>
             <div class="row gy-4 py-2" data-aos="zoom-in">
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
                         <i class="fas fa-home fa-2x"></i>
-                        <h4 class="py-2">HOME BROADBAND</h4>
-                        <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                        <h4 class="py-2">Image Censorship</h4>
+                        <p class="para-light">Scans the document for words that are toxic / inappropriate and blacks out that word in the image provided - Python, OpenCV & pytesseract</p>
+                        <a class="nav-item" href="https://c18357323.wordpress.com" target="_blank"><br>Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
-                        <i class="fas fa-wifi fa-2x"></i>
-                        <h4 class="py-2"> HOME WIFI</h4>
-                        <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                        <i class="fas fa-tv fa-2x"></i>
+                        <h4 class="py-2">Pollen dimensions extraction</h4>
+                        <p class="para-light">Extracts the dimensions of a cell, the output is an image of the cell with the dimensions shown on the image as _ μm x _ μm and _ °.</p>
+                        <a class="nav-item" href="https://github.com/Meapy/ImageP/tree/main/Exam" target="_blank"><br>Learn More</a>
                     </div>                    
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
                         <i class="fas fa-phone fa-2x"></i>
-                        <h4 class="py-2">HOME BROADBAND</h4>
-                        <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                        <h4 class="py-2">Data Quality Report </h4>
+                        <p class="para-light"> Python code to generate the continuous and categorical feature tables in a Data Quality Report form with analysis of the data in the dataset.</p>
+                        <a class="nav-item" href="https://github.com/Meapy/MachineL/tree/main/Assignment2" target="_blank"><br>Learn More</a>
                     </div>                    
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
                         <i class="fas fa-mobile fa-2x"></i>
-                        <h4 class="py-2">MOBILE CONNECTION</h4>
-                        <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                        <h4 class="py-2">Compiler Construction</h4>
+                        <p class="para-light">a Compiler for a C-like language written in Python. Made using Recursive decent parser and Antlr</p>
+                        <a class="nav-item" href="https://github.com/Meapy/Compiler_Construction" target="_blank"><br>Learn More</a>
                     </div>                    
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
                         <i class="fas fa-home fa-2x"></i>
-                        <h4 class="py-2">SECURITY</h4>
-                        <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                        <h4 class="py-2">Sphero RVR With ROS</h4>
+                        <p class="para-light">Developed a robot using raspbery pi and openmv camera. had facial regonition, colision detection and remote controll and recall. Made as part of a team while at Darmstadt</p>
                     </div>                    
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
-                        <i class="fas fa-tv fa-2x"></i>
-                        <h4 class="py-2">TV SETUP BOX</h4>
-                        <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
+                        <i class="fas fa-wifi fa-2x"></i>
+                        <h4 class="py-2"> Machine learning predictions</h4>
+                        <p class="para-light">a classifier that predicts the outcome of a bank marketing campaign.</p>
+                        <a class="nav-item" href="https://github.com/Meapy/MachineL/tree/main/Assignment2" target="_blank"><br>Learn More</a>
                     </div>                    
                 </div>
             </div> <!-- end of row -->
