--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -55,11 +55,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Recent</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#plans">Top</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false" href="#">Projects</a>
+                        
+                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                            <li><a class="dropdown-item" href="article.html">Recent</a></li>
+                            <li><div class="dropdown-divider"></div></li>
+                            <li><a class="dropdown-item" href="terms.html">Top</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -100,7 +103,7 @@
                 <p>Lorem ipsum dolor sit amet.</p>  
             </div>
             <div class="my-3">
-                <a class="btn" href="#plans">View Projects</a>
+                <a class="btn" href="#services">View Projects</a>
             </div>
         </div> <!-- end of container -->
     </section> <!-- end of home -->
@@ -268,9 +271,12 @@
                             <p class="pe-2"><i class="far fa-check-circle fa-1x"></i></p>
                             <p>Spaceship</p>
                         </div>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/o7I3D1aKOC8" allowfullscreen></iframe>
+                        </div>
                         <h4 class="py-3">Finished</h4>
                         <div class="my-3">
-                            <a class="btn" href="https://github.com/Meapy/Project-22" target="_blank" >View Plans</a>
+                            <a class="btn" href="https://github.com/Meapy/Project-22" target="_blank" >View Project</a>
                         </div>
                     </div>  
                 </div>
@@ -304,52 +310,6 @@
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </section> <!-- end of plans -->
-
-
-    <!-- Work -->
-    <section class="work d-flex align-items-center py-5" >
-        <div class="container-fluid text-light">
-            <div class="row">
-                <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right">
-                    <img class="img-fluid" src="./assets/images/work.jpg" alt="work">        
-                </div>
-                <div class="col-lg-5 d-flex align-items-center px-4 py-3" data-aos="">
-                    <div class="row">
-                        <div class="text-center text-lg-start py-4 pt-lg-0">
-                            <p>OUR WORK</p>
-                            <h2 class="py-2">Explore unlimited possibilities</h2>
-                            <p class="para-light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos dicta mollitia totam explicabo obcaecati quia laudantium repudiandae.</p>
-                        </div>
-                        <div class="container" data-aos="fade-up">
-                            <div class="row g-5">
-                                <div class="col-6 text-start" >
-                                    <i class="fas fa-briefcase fa-2x text-start"></i>
-                                    <h2 class="purecounter" data-purecounter-start="0" data-purecounter-end="1258" data-purecounter-duration="3">1</h2>
-                                    <p>PROJECTS COMPLETED</p>
-                                </div>
-                                <div class="col-6" >
-                                    <i class="fas fa-award fa-2x"></i>
-                                    <h2 class="purecounter" data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="3">1</h2>
-                                    <p>AWARDS</p>
-                                </div>
-                                <div class="col-6">
-                                    <i class="fas fa-users fa-2x"></i>
-                                    <h2 class="purecounter" data-purecounter-start="0" data-purecounter-end="1255" data-purecounter-duration="3">1</h2>
-                                    <p>CUSTOMER ACTIVE</p>
-                                </div>
-                                <div class="col-6">
-                                    <i class="fas fa-clock fa-2x"></i>
-                                    <h2 class="purecounter" data-purecounter-start="0" data-purecounter-end="1157" data-purecounter-duration="3">1</h2>
-                                    <p>GOOD REVIEWS</p>
-                                </div>
-                            </div>
-                        </div> <!-- end of container -->
-                    </div> <!-- end of row -->
-                </div> <!-- end of col-lg-5 -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </section> <!-- end of work -->
-
 
     <!-- Testimonials -->
     <div class="slider-1 testimonial text-light d-flex align-items-center">
@@ -561,23 +521,18 @@
             <div class="row" data-aos="fade-right">
                 <div class="col-lg-3 py-4 py-md-5">
                     <div class="d-flex align-items-center">
-                        <h4 class="">Mirko</h4>
+                        <h4 class="">Daniel Krasovski</h4>
                     </div>
-                    <p class="py-3 para-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus animi repudiandae explicabo esse maxime, impedit rem voluptatibus amet error quas.</p>
+                    <p class="py-3 para-light">Backend Software Engineer</p>
                     <div class="d-flex">
                         <div class="me-3">
-                            <a href="#your-link">
-                                <i class="fab fa-facebook-f fa-2x py-2"></i>
+                            <a href="https://www.linkedin.com/in/daniel-krasovski-1a665416b/" target="_blank">
+                                <i class="fab fa-linkedin fa-2x py-2"></i>
                             </a>
                         </div>
                         <div class="me-3">
-                            <a href="#your-link">
-                                <i class="fab fa-twitter fa-2x py-2"></i>
-                            </a>
-                        </div>
-                        <div class="me-3">
-                            <a href="#your-link">
-                                <i class="fab fa-instagram fa-2x py-2"></i>
+                            <a href="https://www.github.com/Meapy" target="_blank">
+                                <i class="fab fa-github fa-2x py-2"></i>
                             </a>
                         </div>
                     </div>
