--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -92,15 +92,15 @@
     <section class="home py-5 d-flex align-items-center" id="header">
         <div class="container text-light py-5"  data-aos="fade-right"> 
             <h1 class="headline">Daniel Krasovski <br><span class="home_text">Projects</span></h1>
-            <p class="para para-light py-3">Computer Science International at Technological University Dublin
+            <p class="para para-light py-3 boldOutline">Computer Science International at Technological University Dublin
                  2018 - 2022 <br> Computer Science at Darmstadt University of Applied Sciences 2020 - 2021</p>
             <div class="d-flex align-items-center">
                 <p class="p-2"><i class="fas fa-laptop-house fa-lg"></i></p>
-                <p>Machine Learing Engineer.</p>  
+                <p class="boldOutline">Machine Learing Engineer.</p>  
             </div>
             <div class="d-flex align-items-center">
                 <p class="p-2"><i class="fas fa-wifi fa-lg"></i></p>
-                <p>Backend Developer.</p>  
+                <p class ="boldOutline">Backend Developer.</p>  
             </div>
             <div class="my-3">
                 <a class="btn" href="#services">View Projects</a>
