--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -65,7 +65,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="improvements.html">improvements</a>
                     </li>
                 </ul>
                 <span class="nav-item social-icons">
@@ -410,7 +410,7 @@
                                             </div>
                                             <div class="ms-3 pt-2">
                                                 <h6>Nikolay Malyshev</h6>
-                                                <p>Entrepreneur</p>
+                                                <p>Plant Based Physicist</p>
                                             </div>
                                         </div>
                                     </div>
@@ -427,7 +427,7 @@
                                             </div>
                                             <div class="ms-3 pt-2">
                                                 <h6>Kacper Piekarski</h6>
-                                                <p>Architect</p>
+                                                <p>Lonely Architect</p>
                                             </div>
                                         </div>
                                     </div>
@@ -462,6 +462,40 @@
                                             <div class="ms-3 pt-2">
                                                 <h6>Kyle Butler</h6>
                                                 <p>Lead Procrasinator</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> <!-- end of swiper-slide -->
+                                <!-- end of slide -->
+
+                                <!-- Slide -->
+                                <div class="swiper-slide">
+                                    <div class="testimonial-card p-4">
+                                        <p>I've only ever seen Daniel run on two occasions. Away from a gyall? And to the bag. Happy Birthday Karen.<br><br><br></p>
+                                        <div class="d-flex pt-4">
+                                            <div>
+                                                <img class="avatar" src="./assets/images/testimonial-5.jpg" alt="testimonial">
+                                            </div>
+                                            <div class="ms-3 pt-2">
+                                                <h6>Ire Adabari</h6>
+                                                <p>The Producer Scientist</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> <!-- end of swiper-slide -->
+                                <!-- end of slide -->
+
+                                <!-- Slide -->
+                                <div class="swiper-slide">
+                                    <div class="testimonial-card p-4">
+                                        <p>Daniel is a very talented individual. He has money, many lovers and a brain that is absolutely fantastic. Shout out to Dan man. I love you deeply <br><br></p>
+                                        <div class="d-flex pt-4">
+                                            <div>
+                                                <img class="avatar" src="./assets/images/testimonial-6.jpg" alt="testimonial">
+                                            </div>
+                                            <div class="ms-3 pt-2">
+                                                <h6>Raphael Ofeimu</h6>
+                                                <p>Mr Consistent</p>
                                             </div>
                                         </div>
                                     </div>
